Implemented entities (user, ad, comment), repositories, services that map from entities to DTO and back
