# src/main/java/ru/skypro/homework/controller/AuthController.java
@@ -9,10 +9,16 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
-import ru.skypro.homework.dto.Login;
-import ru.skypro.homework.dto.Register;
+import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RestController;
+import ru.skypro.homework.dto.LoginDto;
+import ru.skypro.homework.dto.RegisterDto;
+import ru.skypro.homework.dto.Role;
 import ru.skypro.homework.service.AuthService;
+
+import static ru.skypro.homework.dto.Role.USER;
 
 @Slf4j
 @CrossOrigin(value = "http://localhost:3000")
@@ -22,12 +28,13 @@ public class AuthController {
 
     private final AuthService authService;
 
+
     @Operation(summary = "Авторизация пользователя",
             tags = "Авторизация",
             requestBody = @io.swagger.v3.oas.annotations.parameters.RequestBody(
                     content = @Content(
                             mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = Login.class)
+                            schema = @Schema(implementation = LoginDto.class)
                     )
             ),
             responses = {
@@ -40,22 +47,21 @@ public class AuthController {
                             description = "Unauthorized"
                     )
             })
-
     @PostMapping("/login")
-
-    public ResponseEntity<?> login(@RequestBody Login login) {
-        if (authService.login(login.getUsername(), login.getPassword())) {
+    public ResponseEntity<?> login(@RequestBody LoginDto req) {
+        if (authService.login(req.getUsername(), req.getPassword())) {
             return ResponseEntity.ok().build();
         } else {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
         }
     }
+
     @Operation(summary = "Регистрация пользователя",
             tags = "Регистрация",
             requestBody = @io.swagger.v3.oas.annotations.parameters.RequestBody(
                     content = @Content(
                             mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = Register.class)
+                            schema = @Schema(implementation = RegisterDto.class)
                     )
             ),
             responses = {
@@ -68,11 +74,11 @@ public class AuthController {
                             description = "Bad Request"
                     )
             })
-
     @PostMapping("/register")
-    public ResponseEntity<?> register(@RequestBody Register register) {
-        if (authService.register(register)) {
-            return ResponseEntity.status(HttpStatus.CREATED).build();
+    public ResponseEntity<?> register(@RequestBody RegisterDto req) {
+        Role role = req.getRole() == null ? USER : req.getRole();
+        if (authService.register(req, role)) {
+            return ResponseEntity.ok().build();
         } else {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
         }
