# src/main/java/ru/skypro/homework/dto/CreateOrUpdateCommentDto.java
@@ -6,7 +6,7 @@ import lombok.Data;
 import javax.validation.constraints.Size;
 
 @Data
-public class CreateOrUpdateComment {
+public class CreateOrUpdateCommentDto {
     @Schema(description = "текст комментария")
     @Size(min = 8, max = 64)
     private String text;
